--- a/templates/edit.html
+++ b/templates/edit.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-md-3"></div>
   <div class="col-md-6">
-<form method="POST" enctype="multipart/form-data">
+<form method="POST" >
     {% csrf_token %}
        <div class="form-group cl pl" >
         first name:{% render_field form.first_name  type="text" class="form-control" placeholder="first name" required="" %}
@@ -34,11 +34,7 @@
   <div class="form-group cl pl">
       mobile number:{% render_field form1.mobile_number  type="number" class="form-control" placeholder="mobile number" required="" %}
   </div>
-  <!--  <div class=" cl pl">
-   <b> Choose a  profilepicture : &nbsp &nbsp </b> 
-   <input type="file" name="form1.pro_pic"   accept="image/gif, image/jpeg, image/png" value="">
-               
-              </div> -->
+   
 
                 <div class=" cl pl"> &nbsp</div>
      
