--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@
      
       <div class="wrap-login100">
 
-        <form class="login100-form validate-form" method="POST">
+        <form class="login100-form validate-form" method="POST" enctype="multipart/form-data">
           
           <span class="login100-form-title p-b-34">
             Account Signup
@@ -22,26 +22,26 @@
            {% csrf_token %}
 
             <div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type user name">
-            <input id="username" class="input100" type="text" name="username" placeholder="User name">
+            <input id="username" class="input100" type="text" name="username" placeholder="User name" required="">
            
             <span class="focus-input100"></span>
           </div>
           <br>
           <div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" >
-            <input id="first_name" class="input100" type="text" name="first_name" placeholder="First name">
+            <input id="first_name" class="input100" type="text" name="first_name" placeholder="First name" required="">
           
             <span class="focus-input100"></span>
           </div>
     
 
           <div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" >
-            <input id="last_name" class="input100" type="text" name="last_name" placeholder="last name">
+            <input id="last_name" class="input100" type="text" name="last_name" placeholder="last name" required="">
           
             <span class="focus-input100"></span>
           </div>
 
           <div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" data-validate="Type email">
-            <input id="email" class="input100" type="text" name="email" placeholder="email">
+            <input id="email" class="input100" type="text" name="email" placeholder="email" required="">
           
             <span class="focus-input100"></span>
           </div>
@@ -57,19 +57,22 @@
           
             <span class="focus-input100"></span>
           </div>
-
           <div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" >
-            <input id="flat_number" class="input100" type="text" name="flat_number" placeholder="flat number">
+            <input id="flat_number" class="input100" type="text" name="flat_number" placeholder="flat number" required="">
           
             <span class="focus-input100"></span>
           </div>
           <br>
           <div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" >
-            <input id="mobile_number" class="input100" type="text" name="mobile_number" placeholder="mobile number ">
+            <input id="mobile_number" class="input100" type="text" name="mobile_number" placeholder="mobile number " required="">
           
             <span class="focus-input100"></span>
           </div>
-          <br>
+           <div class="cl pl  m-b-20" >
+            <b>Profile Picture  :  </b> 
+            <input type="file" name="pro_pic"   accept="image/gif, image/jpeg, image/png" required="">
+                 
+              </div>
 
           <div class="container-login100-form-btn">
             <button class="login100-form-btn">
