--- a/templates/pro.html
+++ b/templates/pro.html
@@ -6,72 +6,107 @@
 
 <body>
 
-<div class="flex-container ">
-<h1>&nbsp<br><br></h1>
-</div>
-<div class="row">
-  <div class="col-md-3">
-    <div class="card pl" style="height:50%;width:50%;margin-left: 30%;background-color: white">
-  <h3 style="margin-left: auto;
-    margin-right: auto;font-family: Kaushan Script;" >{{ first_name}}</h3>
-  <img src="{{ pic.url }}" >
-  
-</div>
 
+
+<section class="bg0 p-t-104 p-b-116">
+    <div class="container">
+      <div class="flex-w flex-tr">
+        <div class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md">
+          <h3 style="margin-left: auto;
+    margin-right: auto;font-family: Kaushan Script;" > Hii {{ first_name}}</h3>
+
+    <div class="card pl" style="height:50%;width:50%;margin-left: 30%;background-color: white">
+  
+  <img src="{{ pic.url }}" >
+  <a href="/update">
+              <button class="flex-c-m stext-101 cl0 size-125 bg5 bor2 hov-btn3 p-lr-15 trans-04 m-t-30" >
+                                    Edit Profile
+                                </button>
+    </a>
+  
   </div>
   
- <div class="col-md-4">
-
- <div class="card pl" style="background-color: black;color:#66ffe0;">
-  <h3 style="margin-left: auto;
-    margin-right: auto;font-family: Kaushan Script;" >My Profile</h3>
-   <a href="/update">
-               <img src="{% static 'images/edi.png' %}" alt="edit profile" style="width:50px;height:50px;float:right">
-    </a>
-
-     
-  
-  
-
-<div class="container">
-             
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Hi <b>{{first_name}}</b></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><strong>USER NAME </strong>:</td>
-        <td>{{username}}</td>
-        
-      </tr>
-      <tr>
-        <td><strong>FLAT NUMBER </strong>: </td>
-        <td>{{flat_number}}</td>
     
-      </tr>
-      <tr>
-        <td><strong>MOBILE NUMBER</strong> : </td>
-        <td>{{mobile_number}}</td>
-      </tr>
-       <tr>
-        <td><strong>EMAIL</strong> : </td>
-        <td>{{email}}</td>
-      </tr>
-      
-      
-      
-    </tbody>
-  </table>
-</div>
+        </div>
+
+        <div class="size-210 bor10 flex-w flex-col-m p-lr-93 p-tb-30 p-lr-15-lg w-full-md">
+          <div class="flex-w w-full p-b-42">
+            <span class="fs-18 cl5 txt-center size-211">
+            <span class="lnr lnr-user"></span>
+            </span>
+
+            <div class="size-212 p-t-2">
+              <span class="mtext-110 cl2">
+                Username : {{username}}
+              </span>
+              <p class="stext-115 cl6 size-213 p-t-18">
+              <span class="mtext-110 cl2">
+                Fisrtname : {{first_name}}
+              </span></p>
+              <p class="stext-115 cl6 size-213 p-t-18">
+              <span class="mtext-110 cl2">
+                last_name : {{last_name}}
+              </span></p>
+              
+            </div>
+            
+          </div>
+
+          <div class="flex-w w-full p-b-42">
+            <span class="fs-18 cl5 txt-center size-211">
+              <span class="lnr lnr-phone-handset"></span>
+            </span>
+
+            <div class="size-212 p-t-2">
+              <span class="mtext-110 cl2">
+                Mobile Number
+              </span>
+
+              <p class="stext-115 cl1 size-213 p-t-18">
+                {{mobile_number}}
+              </p>
+            </div>
+
+          </div>
+          <div class="flex-w w-full p-b-42">
+            <span class="fs-18 cl5 txt-center size-211">
+              <span class="lnr lnr-apartment"></span>
+            </span>
+
+            <div class="size-212 p-t-2">
+              <span class="mtext-110 cl2">
+                Flat Number
+              </span>
+
+              <p class="stext-115 cl1 size-213 p-t-18">
+                {{flat_number}}
+              </p>
+            </div>
+            
+          </div>
 
 
+          <div class="flex-w w-full">
+            <span class="fs-18 cl5 txt-center size-211">
+              <span class="lnr lnr-envelope"></span>
+            </span>
+
+            <div class="size-212 p-t-2">
+              <span class="mtext-110 cl2">
+                Email
+              </span>
+
+              <p class="stext-115 cl1 size-213 p-t-18">
+                {{email}}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>  
+  
 
 
-
-<div class="col-md-3"></div>
-</div></div></div>
       </body>
 {% endblock %}
