--- a/templates/Ask_form.html
+++ b/templates/Ask_form.html
@@ -26,7 +26,7 @@
                   {% render_field form.aut  type="text" class="form-control" placeholder="Title"%}
               </div>
                 <div class="form-group"  >
-             <input type="text" name="flat_number" class="form-control" placeholder="Preferred time ">
+             <input type="text" name="time" class="form-control" placeholder="Preferred time ">
                 
               </div>
              <div class="form-group"  >
