--- a/templates/display.html
+++ b/templates/display.html
@@ -37,7 +37,7 @@
 					<tr>
 					<td style="color:black">ORDERED ITEMS :</td>
 					{% if x.get_total %}
-				<td> <b>Total :</b> Rs.{{ x.get_total }}</td>
+				<td style="color:green"> <b>Total :</b> Rs.{{ x.get_total }}</td>
 
 					{% if x.bread %}
 					<td>{{x.bread}} PACKET BREAD,</td>	
